force-app/main/default/objects/TTS_Protection__c/TTS_Protection__c.object-meta.xml
<CustomObject>
    <description>Records patent, trademark, copyright, and trade secret protections, including ownership, jurisdiction, lifecycle, and type-specific details.</description>
    <label>Protection</label>
    <nameField>
        <displayFormat>PROC{00000}</displayFormat>
        <label>Protection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>