force-app/main/default/objects/TTS_Protection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the organisation that owns the protection.</description>
    <inlineHelpText>Select the owning organisation; use Protection Owner (Individual) when the owner is a person.</inlineHelpText>
    <label>Protection Owner (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Owned Protections</relationshipLabel>
    <relationshipName>Protections_Account</relationshipName>
    <type>Lookup</type>
</CustomField>