force-app/main/default/objects/TTS_Protection__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the attorney Contact responsible for the protection matter.</description>
    <inlineHelpText>Select the attorney or legal representative handling this protection.</inlineHelpText>
    <label>Attorney Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protections</relationshipLabel>
    <relationshipName>Protections</relationshipName>
    <type>Lookup</type>
</CustomField>