force-app/main/default/objects/TTS_Protection__c/fields/Attorney_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Reference_ID__c</fullName>
    <description>Stores the attorney or legal representative&apos;s reference for the protection matter.</description>
    <inlineHelpText>Enter the docket, matter, or reference ID provided by the attorney.</inlineHelpText>
    <label>Attorney Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>