force-app/main/default/objects/TTS_Protection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Contact who authored the copyrighted work.</description>
    <inlineHelpText>For copyright records, select the Contact who authored the work.</inlineHelpText>
    <label>Copyright Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protections (Copyright Author)</relationshipLabel>
    <relationshipName>Copyrights</relationshipName>
    <type>Lookup</type>
</CustomField>