force-app/main/default/objects/TTS_Protection__c/fields/Date_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Creation__c</fullName>
    <description>Stores the date a copyrighted work was created or completed.</description>
    <inlineHelpText>For copyright records, enter the date the work was created or completed.</inlineHelpText>
    <label>Date of Creation</label>
    <type>Date</type>
</CustomField>