force-app/main/default/objects/TTS_Protection__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Provides a detailed description of the protected invention, mark, work, or trade secret.</description>
    <inlineHelpText>Describe the subject matter and scope of this protection.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>