force-app/main/default/objects/TTS_Protection__c/fields/Examination_Date__c.field-meta.xml
<CustomField>
    <fullName>Examination_Date__c</fullName>
    <description>Stores the date a patent application entered or underwent examination.</description>
    <inlineHelpText>For patent records, enter the examination date reported by the patent office.</inlineHelpText>
    <label>Examination Date</label>
    <type>Date</type>
</CustomField>