force-app/main/default/objects/TTS_Protection__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Patent-oriented formula calculating expiration by adding Patent Term in years to Filing Date.</description>
    <formula>DATE( 
YEAR(Filing_Date__c) + Patent_Term__c, 
MONTH(Filing_Date__c), 
DAY(Filing_Date__c)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only patent expiration date calculated from Filing Date and Patent Term.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>