force-app/main/default/objects/TTS_Protection__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <description>Stores the date a patent application was filed with the patent office.</description>
    <inlineHelpText>For patent records, enter the official application filing date.</inlineHelpText>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>