force-app/main/default/objects/TTS_Protection__c/fields/Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>Issuance_Date__c</fullName>
    <description>Stores the date the protection was issued or granted.</description>
    <inlineHelpText>Enter the official date the protection was issued or granted.</inlineHelpText>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>