force-app/main/default/objects/TTS_Protection__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <description>Identifies the country or territory where the protection applies, using the IP_Country value set.</description>
    <inlineHelpText>Select the country or territory in which the protection is filed, registered, or enforced.</inlineHelpText>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_Country</valueSetName>
    </valueSet>
</CustomField>