force-app/main/default/objects/TTS_Protection__c/fields/Law_Firm_Matter__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The law firm matter or docket engagement associated with this protection.</inlineHelpText>
    <label>Law Firm Matter</label>
    <referenceTo>TTS_Law_Firm_Matter__c</referenceTo>
    <relationshipLabel>Protections</relationshipLabel>
    <relationshipName>Protections</relationshipName>
    <type>Lookup</type>
</CustomField>