force-app/main/default/objects/TTS_Protection__c/fields/Patent_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Patent_Application_Number__c</fullName>
    <description>Stores the official number or reference assigned to a patent application.</description>
    <inlineHelpText>For patent records, enter the application number assigned by the patent office.</inlineHelpText>
    <label>Patent Application Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>