force-app/main/default/objects/TTS_Protection__c/fields/Patent_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Patent_Application_Type__c</fullName>
    <description>Classifies the procedural type of patent application.</description>
    <inlineHelpText>For patent records, select the applicable filing type.</inlineHelpText>
    <label>Patent Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Continuation</fullName>
            </value>
            <value>
                <fullName>Divisional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>PCT</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Reissue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>