force-app/main/default/objects/TTS_Protection__c/fields/Patent_Classification__c.field-meta.xml
<CustomField>
    <fullName>Patent_Classification__c</fullName>
    <description>Stores the International Patent Classification code assigned to the patent subject matter.</description>
    <inlineHelpText>For patent records, enter the applicable IPC code.</inlineHelpText>
    <label>Patent Classification (IPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>