force-app/main/default/objects/TTS_Protection__c/fields/Patent_number__c.field-meta.xml
<CustomField>
    <fullName>Patent_number__c</fullName>
    <description>Stores the official number assigned to an issued patent.</description>
    <externalId>true</externalId>
    <inlineHelpText>For issued patent records, enter the number assigned by the patent office.</inlineHelpText>
    <label>Patent Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>