force-app/main/default/objects/TTS_Protection__c/fields/Patent_Term__c.field-meta.xml
<CustomField>
    <fullName>Patent_Term__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Stores the patent term in years used by the Expiration Date formula.</description>
    <inlineHelpText>For patent records, enter the term in years from the filing date; the default is 20.</inlineHelpText>
    <label>Patent Term</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>