force-app/main/default/objects/TTS_Protection__c/fields/Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Date__c</fullName>
    <description>Stores the patent priority date used to establish filing precedence and assess prior art.</description>
    <inlineHelpText>For patent records, enter the earliest claimed priority date.</inlineHelpText>
    <label>Priority Date</label>
    <type>Date</type>
</CustomField>