force-app/main/default/objects/TTS_Protection__c/fields/Protection_Family__c.field-meta.xml
<CustomField>
    <fullName>Protection_Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the protection to a family of related protection records.</description>
    <inlineHelpText>Select the family grouping for related filings or protections.</inlineHelpText>
    <label>Protection Family</label>
    <referenceTo>TTS_Protection_Family__c</referenceTo>
    <relationshipLabel>Protection Members</relationshipLabel>
    <relationshipName>Protections</relationshipName>
    <type>Lookup</type>
</CustomField>