force-app/main/default/objects/TTS_Protection__c/fields/Protection_Owner_Individual__c.field-meta.xml
<CustomField>
    <fullName>Protection_Owner_Individual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the individual Contact who owns the protection.</description>
    <inlineHelpText>Select the individual owner; use Protection Owner (Account) when the owner is an organisation.</inlineHelpText>
    <label>Protection Owner (Individual)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Protections</relationshipLabel>
    <relationshipName>Protections_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>