force-app/main/default/objects/TTS_Protection__c/fields/Protection_Status__c.field-meta.xml
<CustomField>
    <fullName>Protection_Status__c</fullName>
    <description>Tracks the current legal or administrative status of the protection.</description>
    <inlineHelpText>Select the status that best reflects the protection&apos;s current legal or administrative state.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending Opposition</fullName>
            </value>
            <value>
                <fullName>Application pending</fullName>
            </value>
            <value>
                <fullName>Registration granted</fullName>
            </value>
            <value>
                <fullName>Infringement alleged</fullName>
            </value>
            <value>
                <fullName>Infringement confirmed</fullName>
            </value>
            <value>
                <fullName>License granted</fullName>
            </value>
            <value>
                <fullName>License terminated</fullName>
            </value>
            <value>
                <fullName>Assignment recorded</fullName>
            </value>
            <value>
                <fullName>Renewal required</fullName>
            </value>
            <value>
                <fullName>Copyright expired</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspected breach</fullName>
            </value>
            <value>
                <fullName>Confirmed breach</fullName>
            </value>
            <value>
                <fullName>Litigation pending</fullName>
            </value>
            <value>
                <fullName>Litigation resolved</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Application refused</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Renewal due</fullName>
            </value>
            <value>
                <fullName>Renewal granted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>