force-app/main/default/objects/TTS_Protection__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <description>Stores the date a patent application was published by the patent office.</description>
    <inlineHelpText>For patent records, enter the official application publication date.</inlineHelpText>
    <label>Publication Date</label>
    <type>Date</type>
</CustomField>