force-app/main/default/objects/TTS_Protection__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the protection has been formally registered.</description>
    <inlineHelpText>Select when the relevant authority has formally registered the protection.</inlineHelpText>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>