force-app/main/default/objects/TTS_Protection__c/fields/Registration_date__c.field-meta.xml
<CustomField>
    <fullName>Registration_date__c</fullName>
    <description>Stores the date the protection was formally registered.</description>
    <inlineHelpText>Enter the official registration date for the protection.</inlineHelpText>
    <label>Registration date</label>
    <type>Date</type>
</CustomField>