force-app/main/default/objects/TTS_Protection__c/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <description>Stores the date the protection is due for renewal or maintenance.</description>
    <inlineHelpText>Enter the next renewal or maintenance due date for the protection.</inlineHelpText>
    <label>Renewal date</label>
    <type>Date</type>
</CustomField>