force-app/main/default/objects/TTS_Protection__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the protection to the Technology record it protects.</description>
    <inlineHelpText>Select the technology covered by this protection.</inlineHelpText>
    <label>Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Protections</relationshipLabel>
    <relationshipName>Protections</relationshipName>
    <type>Lookup</type>
</CustomField>