force-app/main/default/objects/TTS_Protection__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Stores the title used to identify the protection.</description>
    <inlineHelpText>Enter the official or working title of the patent, mark, work, or trade secret.</inlineHelpText>
    <label>Title</label>
    <length>244</length>
    <type>Text</type>
</CustomField>