force-app/main/default/objects/TTS_Protection__c/fields/Total_Active_Litigations__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Litigations__c</fullName>
    <description>Roll-up count of related Protection Litigation records whose status is neither Settlement nor Verdict.</description>
    <inlineHelpText>Read-only count of related litigation records whose status is neither Settlement nor Verdict.</inlineHelpText>
    <label>Total Active Litigations</label>
    <summaryFilterItems>
        <field>TTS_Protection_Litigation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Settlement, Verdict</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Protection_Litigation__c.Protection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>