force-app/main/default/objects/TTS_Protection__c/fields/Trademark_registration_number__c.field-meta.xml
<CustomField>
    <fullName>Trademark_registration_number__c</fullName>
    <description>Stores the official registration number assigned to a trademark.</description>
    <externalId>true</externalId>
    <inlineHelpText>For trademark records, enter the registration number assigned by the trademark office.</inlineHelpText>
    <label>Trademark registration number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>