force-app/main/default/objects/TTS_Protection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies the primary patent type for Patent protection records.</description>
    <inlineHelpText>For patent records, select Utility, Design, or Plant.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
                <default>true</default>
                <label>Utility</label>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>