force-app/main/default/objects/TTS_Protection__c/fields/United_States_Patent_Classification__c.field-meta.xml
<CustomField>
    <fullName>United_States_Patent_Classification__c</fullName>
    <description>Stores the United States Patent Classification code assigned to the patent subject matter.</description>
    <inlineHelpText>For patent records, enter the applicable USPC code.</inlineHelpText>
    <label>US Patent Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>