force-app/main/default/objects/TTS_Protection__c/fields/Work_Format__c.field-meta.xml
<CustomField>
    <fullName>Work_Format__c</fullName>
    <description>Classifies the primary format or medium of a copyrighted work.</description>
    <inlineHelpText>For copyright records, select the primary format or medium of the work.</inlineHelpText>
    <label>Work Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architectural</fullName>
            </value>
            <value>
                <fullName>Audiovisual</fullName>
            </value>
            <value>
                <fullName>Choreographic</fullName>
            </value>
            <value>
                <fullName>Literary</fullName>
            </value>
            <value>
                <fullName>Musical</fullName>
            </value>
            <value>
                <fullName>Performing Arts</fullName>
            </value>
            <value>
                <fullName>Sculptural</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Visual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>