force-app/main/default/objects/TTS_Protection__c/fields/Work_Format_Detail__c.field-meta.xml
<CustomField>
    <fullName>Work_Format_Detail__c</fullName>
    <description>Classifies the detailed subtype or medium of a copyrighted work.</description>
    <inlineHelpText>For copyright records, select the detailed subtype that best describes the work.</inlineHelpText>
    <label>Work Format Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Format__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Architectural Plan</fullName>
            </value>
            <value>
                <fullName>Audio Recording</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Choreography</fullName>
            </value>
            <value>
                <fullName>Computer Program</fullName>
            </value>
            <value>
                <fullName>Dance Composition</fullName>
            </value>
            <value>
                <fullName>Dance Performance</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Essay</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Live Performance</fullName>
            </value>
            <value>
                <fullName>Lyrics</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Music Recording</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Play</fullName>
            </value>
            <value>
                <fullName>Poem</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Sculpture</fullName>
            </value>
            <value>
                <fullName>Sheet Music</fullName>
            </value>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Statue</fullName>
            </value>
            <value>
                <fullName>Television Show</fullName>
            </value>
            <value>
                <fullName>Video Game</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>