force-app/main/default/objects/TTS_Protection__c/recordTypes/Copyright.recordType-meta.xml
<RecordType>
    <fullName>Copyright</fullName>
    <active>true</active>
    <description>Copyrights are legal rights granted to the creators of original works, such as written works, music, and art.</description>
    <label>Copyright</label>
</RecordType>