force-app/main/default/objects/TTS_Protection__c/recordTypes/Patent.recordType-meta.xml
<RecordType>
    <fullName>Patent</fullName>
    <active>true</active>
    <description>A patent is a legal right granted to inventors that gives them the exclusive right to make, use, and sell their invention for a certain period of time.</description>
    <label>Patent</label>
</RecordType>