force-app/main/default/objects/TTS_Protection__c/recordTypes/Trade_Secret.recordType-meta.xml
<RecordType>
    <fullName>Trade_Secret</fullName>
    <active>true</active>
    <description>Trade secrets are confidential information that is used in business and gives a company a competitive advantage.</description>
    <label>Trade Secret</label>
</RecordType>