force-app/main/default/objects/TTS_Protection__c/recordTypes/Trademark.recordType-meta.xml
<RecordType>
    <fullName>Trademark</fullName>
    <active>true</active>
    <description>Trademarks are legal rights granted to the owners of brand names, logos, and other marks that are used to identify goods and services.</description>
    <label>Trademark</label>
</RecordType>