force-app/main/default/objects/TTS_Protection__c/listViews/All_Copyrights.listView-meta.xml
<ListView>
    <fullName>All_Copyrights</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Stage__c</columns>
    <columns>Protection_Status__c</columns>
    <columns>Work_Format__c</columns>
    <columns>Work_Format_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TTS_Protection__c.Copyright</value>
    </filters>
    <label>All Copyrights</label>
</ListView>