force-app/main/default/objects/TTS_Protection__c/listViews/All_Patents.listView-meta.xml
<ListView>
    <fullName>All_Patents</fullName>
    <columns>NAME</columns>
    <columns>Filing_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Issuance_Date__c</columns>
    <columns>Title__c</columns>
    <columns>Stage__c</columns>
    <columns>Protection_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TTS_Protection__c.Patent</value>
    </filters>
    <label>All Patents</label>
</ListView>