force-app/main/default/objects/TTS_Protection__c/listViews/All_Trade_Secrets.listView-meta.xml
<ListView>
    <fullName>All_Trade_Secrets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TTS_Protection__c.Trademark</value>
    </filters>
    <label>All Trade Secrets</label>
</ListView>