force-app/main/default/objects/TTS_Protection__c/listViews/All_Trademarks.listView-meta.xml
<ListView>
    <fullName>All_Trademarks</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Protection_Status__c</columns>
    <columns>Title__c</columns>
    <columns>Trademark_registration_number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TTS_Protection__c.Trademark</value>
    </filters>
    <label>All Trademarks</label>
</ListView>